[package]
name = "nes"
version = "0.1.0"
authors = ["Arun Kulshreshtha <kulshrax@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bitflags = "2.3"
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10"
hex = "0.4"
log = "0.4"
nom = "7.0"
pixels = "0.13"
winit = "0.28"
winit_input_helper = "0.14"
